fixed spacing with social buttons on mobile and removed animation for hover

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -86,13 +86,13 @@
             color: white;
 
         }
-        @keyframes color_change {
-            25% {color: red;}
-            50% {color: green;}
-            75% {color: blue;}
-            100% {color: red;}
-
-        }
+        // Animation ----------------------------------------
+        // @keyframes color_change {
+        //     25% {color: red;}
+        //     50% {color: green;}
+        //     75% {color: blue;}
+        //     100% {color: red;}
+        // }
         .resume {
             color: white;
             text-decoration: none;
@@ -103,8 +103,8 @@
 
         :hover {
             transition: 250ms ease;
-            // color: red;
-            animation: color_change 2s infinite;
+            color: $color-yellow;
+            // animation: color_change 2s infinite;
 
         }
     }
@@ -211,18 +211,17 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: space-evenly;
-                align-items: center;
+                align-items: flex-start;
                 align-self: center;
 
                 margin-top: 1em;
                 width: 60%;
 
-                i,
-                p {
-                    margin-bottom: 0;
-
+                i{
                     font-size: 2.5rem;
-
+                }
+                p {
+                    font-size: 2.3rem;
                 }
             }
         }
